--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ css?family=Roboto'); */
 
 .about .about-content{
   margin: 150px auto 0 auto;
-  width:500px;
+  width:90%;
 }
 
 .about .about-content h1{
